8195788: Remove obsolete javafx.jmx module
Reviewed-by: aghaisas, prr