@@ -2168,6 +2168,8 @@ project(":controls") {
 }
 
 project(":swing") {
+    // Now that JMX is gone, we can likely uncomment the following as
+    // a fix for JDK-8195669
     /* should not be built, but needed in JMX
     tasks.all {
         if (!COMPILE_SWING) it.enabled = false
@@ -2290,31 +2292,6 @@ project(":fxml") {
     }
 
     compileJava.options.compilerArgs.addAll(qualExportsCore)
-}
-
-project(":jmx") {
-    project.ext.buildModule = false
-    project.ext.moduleRuntime = false
-    project.ext.moduleName = "javafx.jmx"
-
-    commonModuleSetup(project, [ 'base', 'graphics', 'swing', 'controls', 'media', 'jmx' ])
-
-    dependencies {
-    }
-
-    // Tests are permanently disabled
-    test.enabled = false
-
-    compileJava.options.compilerArgs.addAll([
-            "--add-exports=javafx.graphics/com.sun.javafx.jmx=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.scenario.animation=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.scenario.animation.jmx=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
-            "--add-exports=javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED",
-            "--add-exports=javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED",
-            ])
 }
 
 project(":fxpackagerservices") {
